package code.component.manageRestaurant.dao;

public interface CrudDAO<T> {

   void deleteById(Integer id);

}